syntax = "proto3";

package infraboard.keyauth.application;
option go_package = "github.com/infraboard/keyauth/apps/application";

import "apps/application/pb/request.proto";
import "apps/application/pb/application.proto";

service Service {
	rpc CreateApplication(CreateApplicatonRequest) returns(Application);
	rpc DescribeApplication(DescribeApplicationRequest) returns(Application);
	rpc QueryApplication(QueryApplicationRequest) returns(Set);
	rpc DeleteApplication(DeleteApplicationRequest) returns(Application);
}
